--- a/tipografika.html
+++ b/tipografika.html
@@ -13,7 +13,7 @@
 	span{display: block;}
 	.logomenu ul li a{ padding: 10px 0px 0px 0px;font-size:20px; display:block; color:#FFFE00; }
 	center {margin:0px;  padding:0 200px 0 0}
-	#web{color:#FFFFFF; max-width: 600px; padding: 100px 20px 20px 20px;position:relative; margin: -770px 0  0 220px; font-size:20px;} 
+	#web{color:#FFFFFF; max-width: 750px; padding: 100px 20px 20px 20px;position:relative; margin: -770px 0  0 220px; font-size:20px;} 
 	.nebo{padding:25px; color:#ffffff;}
 	.link{color:#FFFFFF}
 </style>
@@ -26,9 +26,9 @@
 	<li><a href="https://webdesigner.ga/webdesigne.html">Вебдизайн</a></li>
 	<li><a href="https://webdesigner.ga/kontent.html">Контент</a></li>
 		<li class="link"><a href="https://webdesigner.ga/tipografika.html">Типографика</a>
-		<li><a href="https://webdesigner.ga/sounddesigner.html">Аудиодизайн</a></li></li>
+		<li><a href="https://webdesigner.ga/sounddesigner.html">Аудиодизайн</a></li></li></ul>
 		
-	<li><a href="pages/uroki-gitary-gomel.html" rel="index"><img src="pages/img/Uroki-gitary-gomel.jpg" alt="Уроки игры на гитаре в Гомеле" width="160px"></a></li></ul>
+	
 </center>
 </nav>
 <article id="web">
