--- a/webdesigne.html
+++ b/webdesigne.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
 	<head>
+		<script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - Что такое вебдизайн?</title>
 		<meta name="Description" content="Webdesigner.ga ~  Вебдизайн — это визуальное оформление контента интернет страницы размещённой в сети интернет средствами языков HTML  и  CSS.">
 		<meta name="Keywords" content="Webdesigner, вебдизайн, вебдизайнер, html,css. что такое вебдизайн, оформление контента, о вебдизайне.">
