--- a/tipografika.html
+++ b/tipografika.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
 	<head>
+		<script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - Что такое типографика?</title>
 		<meta name="Description" content="Webdesigner.ga ~  Типографика — это разнообразное начертание шрифтов, используещееся при оформлении текстовой информации в таких изданиях как газеты, журналы..">
 		<meta name="Keywords" content="webdesigner, типографика, вебдизайн, html,css, что такое типографика">
