--- a/sounddesigner.html
+++ b/sounddesigner.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
-	<head>
+	<head> 
+		<script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - O СSS! в сети</title>
 		<meta name="description" content="Webdesigner.ga ~  Саунд дизайн">
 		<meta name="keywords" content="Звуковой дизайн, дизайн звука, саунд дизайн, саунд дизайнер.">
