--- a/kontent.html
+++ b/kontent.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
 	<head>
+		<script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - Что такое контент?</title>
 		<meta name="Description" content="Webdesigner.ga ~  Контентом — называется информационное содержание сайта, которыми могут быть как текстовые и графические записи...">
 		<meta name="Keywords" content="webdesigner, контент, вебдизайнер, html,css.что такое контент">
