--- a/pages/net.html
+++ b/pages/net.html
@@ -1,6 +1,7 @@
 <Doctype! html>
 <html lang="ru" charset="utf8">
 <head>
+	<script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<title>Речицкое пиво</title>
 	<meta name="description" content="Днепровское пиво эталон качества с 1975 года.">
 		<meta name="keywords" content="Речицкое пиво, Днепровское пиво">
