--- a/pages/0.html
+++ b/pages/0.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
-	<head>
+	<head> <script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - О ШТМЛ! в сети</title>
 		<meta name="description" content="Webdesigner.ga ~  О ШТМЛ! —  язык гипертекстовой разметки (оформления) текста">
 		<meta name="keywords" content="Webdesigner, О ШТМЛ, html, о языке гипертекстовой рзметки текста, браузерные войны.">
