--- a/pages/0css.html
+++ b/pages/0css.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
-	<head>
+	<head>  
+		<script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - O СSS! в сети</title>
 		<meta name="description" content="Webdesigner.ga ~  О СSS! —  язык оформления художественного текста">
 		<meta name="keywords" content="Webdesigner, О CSS, css, офрмлениe документа html, браузерные войны.">
