--- a/pages/designersale.html
+++ b/pages/designersale.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
-	<head>
+	<head>  <script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - Корпаративный сайт</title>
 		<meta name="description" content="Webdesigner.ga ~ Пример корпоративного дизайна">
 		<meta name="keywords" content="Дизайн, Живопись, ню, графический дизайнер, художественная выставка, современное искусство.">
